# quantum-casino

frontend/: package.json  pnpm-lock.yaml
frontend/app/: frontend.code-workspace  globals.css  layout.tsx  page.tsx
frontend/components/: quantum-chip-icon.tsx
quantum/: .env.example  README.md  guide.md  package.json  pyproject.toml
quantum/src/quantum_games/: __init__.py  circuits.py  cli.py  games.py  server.py  service.py
quantum/tests/: test_smoke.py
